sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: value to is not a member of Boolean
while(i < 0 to 10) 
            ^AlgBubbleSort1:8: error: not found: value getValeurs
if(getValeurs(i int) < getValeurs(i+1))
   ^AlgBubbleSort1:9: error: not found: value getValeurs
echange(getValeurs(i),  getValeurs(i+1))
        ^